SecureServ Module for NeoStats Changelog.
Fish (F), Mark (M), DeadNotBuried (D)
==============================================================================
3.0.a2 - Mark (M)
 - Add AUTOUPDATETIME setting so users can choose the interval at which
   SecureServ checks for dat file updates. (D)
 
3.0.a1 - Mark (M) 23 Feb 2005
 - Add preliminary support for topic message scans. (M)
 - Update module to use new core module exclusion support. (M)
 - Add preliminary support for away message and quit message scans. (M)
 - Change virus storage to multiple lists to optimise scanning process. (M)
 - Add error checks for det and act types in load. (M)
 - Change status command to report in tabular format. (M)
 - Removed splittime setting which is now handled by core. (M)
 - Move GetRandomChan function to core. (M)
 - Move hrand function to core. (M)
 - Optimise onjoin and mon bots to store and use a bot pointer (M)
 - Make helper system optional (M)
 - Optimise helper system based on moddata (M)
 - Remove flood check code, this is now handled by a new module FloodServ (M)
 - Port to 3.0 API and Win32 (M)

1.3 - Fish (F) and Mark (M) - 27 Aug, 2004
 - Fix bug 183 - secureserv echoing messages for other module bots. (M)
 - Fix bug 190 - wrong message displayed for chan message off. (M)
 - Fix bug 176 - monchans and excludes (M)
 - Ported to core command processor (M)
 - SET interface for nick/user/host/realname added (M)
 - Fix for bug 115, monchan bots now reinit if killed (M)
 - Add set option for onjoin bot modes so users can specify their own modes (M)
 - OnJoin bots will now leave channels when the last user leaves (M)
 - Add a KILL action for viri. Useful to keep the akill list manageable by not 
   adding bots that do not rejoin after kill (e.g. WebCamSpam) (M)
 - use Match rather than fnmatch to avoid case sensitivity problems with modules (F)

1.2 - Fish (F) and Mark (M) - 12 Feb, 2004
 - Fix up a monbot channel cycle crash (M)