@@ -112,7 +112,9 @@ static bot_setting ss_settings[]=
 	{"MONCHANCYCLETIME", &SecureServ.monchancycletime,SET_TYPE_INT,1,10000,	NS_ULEVEL_ADMIN,"MonitorBotCycle",NULL,	ts_help_set_monchancycletime, ss_cmd_set_monchancycletime_cb, (void *)1800 },
 	{"CYCLETIME",	&SecureServ.stayinchantime,SET_TYPE_INT,	1,	1000,		NS_ULEVEL_ADMIN,"CycleTime",	NULL,	ts_help_set_cycletime, ss_cmd_set_cycletime_cb, (void *)60 },
 	{"MONBOT",		NULL,					SET_TYPE_CUSTOM,	0,	0,			NS_ULEVEL_ADMIN,"MonBot",		NULL,	ts_help_set_monbot, ss_cmd_set_monbot, (void *)0 },
-	{"UPDATEINFO",	NULL,					SET_TYPE_CUSTOM,	0,	0,			NS_ULEVEL_ADMIN,"UpdateUname",			NULL,	ts_help_set_updateinfo, ss_cmd_set_updateinfo, (void *)0 },
+
+	{"UPDATEUSER",	SecureServ.updateuname,	SET_TYPE_STRING,	0,	MAXNICK,	NS_ULEVEL_ADMIN,"UpdateUname",			NULL,	ts_help_set_updateuser, NULL, (void *)0 },
+	{"UPDATEPASS",	SecureServ.updatepw,	SET_TYPE_STRING,	0,	MAXNICK,	NS_ULEVEL_ADMIN,"UpdateUname",			NULL,	ts_help_set_updatepass, NULL, (void *)0 },
 	{"AUTOUPDATE",	&SecureServ.autoupgrade,SET_TYPE_BOOLEAN,	0,	0,			NS_ULEVEL_ADMIN,"AutoUpdate",	NULL,	ts_help_set_autoupdate, ss_cmd_set_autoupdate_cb, (void *)0 },
 	{"AUTOUPDATETIME",	&SecureServ.autoupgradetime,SET_TYPE_INT,	3600,	172800,			NS_ULEVEL_ADMIN,"AutoUpdateTime",	NULL,	ts_help_set_autoupdatetime, ss_cmd_set_autoupdatetime_cb, (void *)7200 },
 	{"ONJOINBOTMODES",&onjoinbot_modes,		SET_TYPE_STRING,	0,	MODESIZE,	NS_ULEVEL_ADMIN,"OnJoinBotModes",NULL,	ts_help_set_onjoinbotmodes, NULL, (void *)"+" },
