@@ -227,53 +227,34 @@ int ss_cmd_update(CmdParams *cmdparams)
 	return NS_SUCCESS;
 }
 
-int ss_cmd_set_updateinfo(CmdParams *cmdparams, SET_REASON reason) 
+int ss_cmd_set_autoupdate_cb(CmdParams *cmdparams, SET_REASON reason) 
 {
-	SET_SEGV_LOCATION();
 	switch( reason )
 	{
-		case SET_LOAD:
-			DBAFetchConfigStr ("UpdateUname", SecureServ.updateuname, MAXNICK);
-			DBAFetchConfigStr ("UpdatePassword", SecureServ.updatepw, MAXNICK);
-			break;
-		case SET_LIST:
-			irc_prefmsg (ss_bot, cmdparams->source, "UPDATEINFO:   %s", SecureServ.updateuname[0] ? "Set" : "Not Set");
-			if (SecureServ.updateuname[0]) {
-				irc_prefmsg (ss_bot, cmdparams->source, "Update Username is %s, Password is %s", SecureServ.updateuname, SecureServ.updatepw);
+		case SET_VALIDATE:
+			if( !SecureServ.updateuname[0] )
+			{
+				irc_prefmsg (ss_bot, cmdparams->source, "You can not enable AutoUpdate without setting the update user name");
+				return NS_FAILURE;
+			}
+			if( !SecureServ.updatepw[0] )
+			{
+				irc_prefmsg (ss_bot, cmdparams->source, "You can not enable AutoUpdate without setting the update password");
+				return NS_FAILURE;
 			}
 			break;
 		case SET_CHANGE:
-			if (cmdparams->ac < 3) {
-				return NS_ERR_NEED_MORE_PARAMS;
+			if (SecureServ.autoupgrade == 1) 
+			{
+				AddTimer (TIMER_TYPE_INTERVAL, AutoUpdate, "AutoUpdate", SecureServ.autoupgradetime);
+			} 
+			else 
+			{
+				DelTimer ("AutoUpdate");
 			}
-			strlcpy(SecureServ.updateuname, cmdparams->av[1], MAXNICK);
-			strlcpy(SecureServ.updatepw, cmdparams->av[2], MAXNICK);
-			DBAStoreConfigStr ("UpdateUname", SecureServ.updateuname, MAXNICK);
-			DBAStoreConfigStr ("UpdatePassword", SecureServ.updatepw, MAXNICK);
-			CommandReport(ss_bot, "%s changed the Update Username and Password", cmdparams->source->name);
-			irc_prefmsg (ss_bot, cmdparams->source, "Update Username and Password has been updated to %s and %s", SecureServ.updateuname, SecureServ.updatepw);
 			break;
 		default:
 			break;
-	}
-	return NS_SUCCESS;
-}
-
-int ss_cmd_set_autoupdate_cb(CmdParams *cmdparams, SET_REASON reason) 
-{
-	if( reason == SET_CHANGE )
-	{
-		if (SecureServ.autoupgrade == 1) {
-			if ((SecureServ.updateuname[0]) && (SecureServ.updatepw[0])) {
-				AddTimer (TIMER_TYPE_INTERVAL, AutoUpdate, "AutoUpdate", SecureServ.autoupgradetime);
-			} else {
-				irc_prefmsg (ss_bot, cmdparams->source, "You can not enable AutoUpdate, as you have not set a username and password");
-				SecureServ.autoupgrade = 0;
-				DelTimer ("AutoUpdate");
-			}
-		} else {
-			DelTimer ("AutoUpdate");
-		}
 	}
 	return NS_SUCCESS;
 }
